added external link

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-YK7Y7NDYWS');
+    gtag('config', 'G-BX2TER9M43');
   </script>
 </head>
 
