--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <title>CNTower Lights</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YK7Y7NDYWS"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BX2TER9M43"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
